# ic-ckTestBTC

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  FEATURES.md  PRD.md  README.md  clippy.toml  components.json  dfx.json  package-lock.json  package.json  playwright.config.ts  refactor-hooks.md  tsconfig.check.json  tsconfig.json  tsconfig.strict.json  vite.config.ts
.claude/: agent-workflow.md  code-review-checklist.md  devops-shell-specialist.md  feature-management-specialist.md  frontend-testing-specialist.md  ic-dfx-specialist.md  react-frontend-specialist.md  rust-backend-specialist.md  rust-testing-specialist.md  styling-component-specialist.md
.github/workflows/: playwright-tests.yml
playwright-report/: index.html
scripts/: DEPLOYMENT.md  build-backend.sh  build.sh  deploy-backend.sh  deploy-production.sh  generate-declarations.sh  setup-canisters.sh  update-env.sh  validate-env-setup.sh
src/backend/: Cargo.toml  backend.did
src/backend/src/: lib.rs
src/frontend/: CLAUDE.md  index.html
src/frontend/src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
src/local_token/: Cargo.toml  local_token.did
src/local_token/src/: lib.rs
src/mock_cktestbtc_ledger/: Cargo.toml  mock_cktestbtc_ledger.did
src/mock_cktestbtc_minter/: Cargo.toml  mock_cktestbtc_minter.did
tests/: TESTING.md
tests/playwright/: 00-authentication.spec.ts  01-home-screen.spec.ts  02-wallet-screen-header.spec.ts  03-information-tab.spec.ts  04-deposit-withdrawals-tab.spec.ts  05-send-receive-tab.spec.ts  06-transactions-tab.spec.ts  README.md
(+112 files in other folders)
