[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = []
development = []

[dependencies]
candid = { version = "0.10", features = ["value"] }
ic-cdk = "0.13"
ic-cdk-timers = "0.7"
ic-stable-structures = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
hex = "0.4"
sha2 = "0.10"

[dev-dependencies]
candid_parser = "0.1"